crates/swc_css_parser/tests/errors/selector/attribute/invalid-matcher-1/output.stderr
error: Invalid attribute matcher value
 --> $DIR/tests/errors/selector/attribute/invalid-matcher-1/input.css:1:7
  |
1 | [href=] {}
  |       ^

